--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -1,66 +1,61 @@
 <%= render "shared/header" %>
 <div class='main'>
-  <h1 class="page-heading">案件一覧</h2>
-  <%= link_to(new_opportunity_path, class: 'post-btn') do %>
-    <span class='post-btn-text'>新規案件投稿</span>
-  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-  <% end %>
 
-<%# モーダル投稿機能 %>
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-3">
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">新規案件</button>
-    </div>
-    <div class="col-9 opportunities">
-      <%= render 'opportunities', opportunities: @opportunities %>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">新規案件投稿</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <%# モーダル投稿機能 %>
+  <div class="container">
+    <div class="row">
+      <div class="col-2">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">新規案件</button>
       </div>
-      <%= form_for @opportunity, remote: true do |f| %>
-        <div class="modal-body">
-          <div class="form-groupe">
-            <%= f.label :op_name, "案件名" %>
-            <%= f.text_field :op_name, class: "form_control" %>
-          </div>
-          <div class="form-groupe">
-            <%= f.label :op_name, "会社名" %>
-            <%= f.text_field :company, class: "form_control" %>
-          </div>
-          <div class="form-groupe">
-            <%= f.label :op_name, "エリア" %>
-            <%= f.collection_select(:company_area_id, CompanyArea.all, :id, :name, {}, {class: "form_control", id:"company-area"}) %>
-          </div>
-          <div class="form-groupe">
-            <%= f.label :op_name, "先方担当者名" %>
-            <%= f.text_field :person_in_charge, class: "form_control" %>
-          </div>
-          <div class="form-groupe">
-            <%= f.label :op_name, "商品情報取得日" %>
-            <%= f.date_field :date_of_obtaining, class: "form_control" %>
-          </div>
-          <div class="form-groupe">
-            <%= f.label :op_name, "フェーズ" %>
-            <%= f.collection_select(:phase_id, Phase.all, :id, :name, {}, {class: "form_control", id:"phase"}) %>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
-          <%= f.submit "投稿する", class: "btn btn-primary" %>
-        </div>
-      <% end %>
+      <div class="col-9 opportunities">
+        <%= render 'opportunities', opportunities: @opportunities %>
+      </div>
     </div>
   </div>
-</div>
-<%# /モーダル投稿機能 %>
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">新規案件投稿</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <%= form_for @opportunity, remote: true do |f| %>
+          <div class="modal-body">
+            <div class="form-groupe">
+              <%= f.label :op_name, "案件名" %>
+              <%= f.text_field :op_name, class: "form_control" %>
+            </div>
+            <div class="form-groupe">
+              <%= f.label :op_name, "会社名" %>
+              <%= f.text_field :company, class: "form_control" %>
+            </div>
+            <div class="form-groupe">
+              <%= f.label :op_name, "エリア" %>
+              <%= f.collection_select(:company_area_id, CompanyArea.all, :id, :name, {}, {class: "form_control", id:"company-area"}) %>
+            </div>
+            <div class="form-groupe">
+              <%= f.label :op_name, "先方担当者名" %>
+              <%= f.text_field :person_in_charge, class: "form_control" %>
+            </div>
+            <div class="form-groupe">
+              <%= f.label :op_name, "商品情報取得日" %>
+              <%= f.date_field :date_of_obtaining, class: "form_control" %>
+            </div>
+            <div class="form-groupe">
+              <%= f.label :op_name, "フェーズ" %>
+              <%= f.collection_select(:phase_id, Phase.all, :id, :name, {}, {class: "form_control", id:"phase"}) %>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
+            <%= f.submit "投稿する", class: "btn btn-primary" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <%# /モーダル投稿機能 %>
 
 </div>
 
