index画面の調整

--- a/app/assets/stylesheets/opportunities/_opportunities.css
+++ b/app/assets/stylesheets/opportunities/_opportunities.css
@@ -15,3 +15,9 @@
   color: #0C1EFD;
   cursor: pointer;
 }
+
+.opportunities{
+  background-color: white;
+  border-radius: 10px;
+  margin-top: 10px;
+}
