--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -4,8 +4,8 @@
   <%# モーダル投稿機能 %>
   <div class="container">
     <div class="row">
-      <div class="">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">新規案件</button>
+      <div class="post-btn">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">新規案件投稿</button>
       </div>
       <div class="opportunities">
         <%= render 'opportunities', opportunities: @opportunities %>
