--- a/app/assets/stylesheets/opportunities/edit.css
+++ b/app/assets/stylesheets/opportunities/edit.css
@@ -1,7 +1,43 @@
 .op-main{
+  background: linear-gradient(45deg,#11998e,#008080)
+}
+
+.main-head-contents{
+  height: 70px;
   display: flex;
-  padding: 10px;
-  background: linear-gradient(45deg,#11998e,#38ef7d)
+  align-items: center;
+}
+
+.main-head{
+  background-color: white;
+  height: 50px;
+  width: 100%;
+  margin: 0 50px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.status-bar{
+  width: 100%;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.phase{
+
+}
+
+.progress{
+  width: 90%;
+  border-radius: 20px;
+}
+
+.main-foot{
+  display: flex;
 }
 
 .form-size{
@@ -11,14 +47,14 @@
 .edit-form{
   background-color: white;
   border-radius: 10px;
-  margin: 30px 10px 30px 30px;
+  margin: 0 10px 30px 30px;
   padding: 15px;
 }
 
 .comment-forms{
   background-color: #F0F2F7;
   border-radius: 10px;
-  margin: 30px 30px 30px 10px;
+  margin: 0 20px 30px 10px;
   padding: 15px;
 }
 
