--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -1,11 +1,10 @@
 .top-page-header{
-  outline: 1px solid #008080;
-  width: 100%;
+  height: 160px;
 }
 
 .search-bar-contents{
+  height: 60%;
   padding: 10px;
-  outline: 1px solid #008080;
   display: flex;
   justify-content: space-between;
 }
@@ -17,7 +16,7 @@
   background-color: #008080;
   text-decoration: none;
   text-align: center;
-  line-height: 50px;
+  margin-left: 40px;
 }
 
 .my-page-link{
@@ -37,16 +36,17 @@
 }
 
 .nav{
+  height: 40%;
   display: flex;
   justify-content: space-between;
   outline: 1px solid #008080;
-  padding: 10px;
 }
 
 .btns{
   display: flex;
   justify-content: space-between;
   line-height: 50px;
+  padding-left: 40px;
 }
 
 .btn{
