--- a/app/views/opportunities/edit.html.erb
+++ b/app/views/opportunities/edit.html.erb
@@ -1,94 +1,113 @@
 <%= render "shared/header" %>
 <div class="op-contents">
   <div class="op-main">
-    <div class="edit-form col-8">
-      <%= form_with model: @opportunity, local: true do |f| %>
 
-      <%= render 'shared/error_messages', model: f.object %>
-
-      <div class="form-group">
-        <div class="weight-bold-text">備考欄</div>
-        <%= f.text_area :free_text, class:"form-control form-size", id:"free_text", placeholder:"フリーテキスト", rows:"3" %>
-      </div>
-
-      <div class="row">
-        <div class="form-group col-6">
-          <div class="weight-bold-text">商談名</div>
-          <%= f.text_area :op_name, class:"form-control form-size", id:"op-name", placeholder:"商談名（必須)", rows:"1" %>
+      <div class="main-head-contents">
+    <div class="main-head">
+    <%# フェーズ(Progressバー) %>
+        <div class="status-bar">
+          <div class="phase">フェーズ</div>
+          <div class="progress" style="height: 30px;">
+            <div class="progress-bar"
+                role="progressbar"
+                style="width: 25%;">
+                <%= @opportunity.phase.name %>
+            </div>
+          </div>
         </div>
-        <div class="form-group col-6">
-          <div class="weight-bold-text">担当営業者名</div>
-          <div><%= @opportunity.user.name %></div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="form-group col-6">
-          <div class="weight-bold-text">会社名</div>
-          <%= f.text_area :company, class:"form-control form-size", id:"company", placeholder:"会社名", rows:"1" %>
-        </div>
-        <div class="form-group col-6">
-          <div class="weight-bold-text">先方担当者名</div>
-          <%= f.text_area :person_in_charge, class:"form-control form-size", id:"person_in_charge", placeholder:"先方担当者名", rows:"1" %>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="company_area_id col-6">
-          <div class="weight-bold-text">エリア</div>
-          <%= f.collection_select(:company_area_id, CompanyArea.all, :id, :name, {}, {class:"select-box", id:"company-area"}) %>
-        </div>
-        <div class="date_of_obtaining col-6">
-          <div class="weight-bold-text">案件情報取得日</div>
-          <%= f.date_field :date_of_obtaining, class:"items-text", id:"date_of_obtaining", placeholder:"商談情報取得日" %>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="date_of_participation col-6">
-          <div class="weight-bold-text">参加決定日</div>
-          <%= f.date_field :date_of_obtaining, class:"items-text", id:"date_of_participation", placeholder:"参加決定日" %>
-        </div>
-        <div class="date_of_negotiation col-6">
-          <div class="weight-bold-text">商談日</div>
-          <%= f.date_field :date_of_negotiation, class:"items-text", id:"date_of_negotiation", placeholder:"商談日" %>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="form-group col-6">
-          <div class="weight-bold-text">予定売上金額</div>
-          <%= f.text_area :estimated_sales_amount, class:"form-control form-size", id:"estimated_sales_amount", placeholder:"予定売上金額", rows:"1" %>
-        </div>
-        <div class="form-group col-6">
-          <div class="weight-bold-text">確定売上金額</div>
-          <%= f.text_area :sales_amount, class:"form-control form-size", id:"sales_amount", placeholder:"確定売上金額", rows:"1" %>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="contracted_date col-6">
-          <div class="weight-bold-text">成約日</div>
-          <%= f.date_field :contracted_date, class:"items-text", id:"contracted_date", placeholder:"成約日" %>
-        </div>
-        <div class="lost_order_date col-6">
-          <div class="weight-bold-text">失注日</div>
-          <%= f.date_field :lost_order_date, class:"items-text", id:"lost_order_date", placeholder:"失注日" %>
-        </div>
-      </div>
-
-      <div class="phase_id">
-        <div class="weight-bold-text">フェーズ</div>
-        <%= f.collection_select(:phase_id, Phase.all, :id, :name, {}, {class:"select-box", id:"phase"}) %>
-      </div>
-
-      <div class="purchase">
-        <div class="purchase-btn">
-          <%= f.submit "保存", class:"btn btn-primary" %>
-        </div>
-      </div>
-    <% end %>
+    <%# /フェーズ(Progressバー) %>
     </div>
+      </div>
+    
+    <div class="main-foot">
+      <div class="edit-form col-8">
+        <%= form_with model: @opportunity, local: true do |f| %>
+
+        <%= render 'shared/error_messages', model: f.object %>
+
+        <div class="form-group">
+          <div class="weight-bold-text">備考欄</div>
+          <%= f.text_area :free_text, class:"form-control form-size", id:"free_text", placeholder:"フリーテキスト", rows:"3" %>
+        </div>
+
+        <div class="row">
+          <div class="form-group col-6">
+            <div class="weight-bold-text">商談名</div>
+            <%= f.text_area :op_name, class:"form-control form-size", id:"op-name", placeholder:"商談名（必須)", rows:"1" %>
+          </div>
+          <div class="form-group col-6">
+            <div class="weight-bold-text">担当営業者名</div>
+            <div><%= @opportunity.user.name %></div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="form-group col-6">
+            <div class="weight-bold-text">会社名</div>
+            <%= f.text_area :company, class:"form-control form-size", id:"company", placeholder:"会社名", rows:"1" %>
+          </div>
+          <div class="form-group col-6">
+            <div class="weight-bold-text">先方担当者名</div>
+            <%= f.text_area :person_in_charge, class:"form-control form-size", id:"person_in_charge", placeholder:"先方担当者名", rows:"1" %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="company_area_id col-6">
+            <div class="weight-bold-text">エリア</div>
+            <%= f.collection_select(:company_area_id, CompanyArea.all, :id, :name, {}, {class:"select-box", id:"company-area"}) %>
+          </div>
+          <div class="date_of_obtaining col-6">
+            <div class="weight-bold-text">案件情報取得日</div>
+            <%= f.date_field :date_of_obtaining, class:"items-text", id:"date_of_obtaining", placeholder:"商談情報取得日" %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="date_of_participation col-6">
+            <div class="weight-bold-text">参加決定日</div>
+            <%= f.date_field :date_of_obtaining, class:"items-text", id:"date_of_participation", placeholder:"参加決定日" %>
+          </div>
+          <div class="date_of_negotiation col-6">
+            <div class="weight-bold-text">商談日</div>
+            <%= f.date_field :date_of_negotiation, class:"items-text", id:"date_of_negotiation", placeholder:"商談日" %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="form-group col-6">
+            <div class="weight-bold-text">予定売上金額</div>
+            <%= f.text_area :estimated_sales_amount, class:"form-control form-size", id:"estimated_sales_amount", placeholder:"予定売上金額", rows:"1" %>
+          </div>
+          <div class="form-group col-6">
+            <div class="weight-bold-text">確定売上金額</div>
+            <%= f.text_area :sales_amount, class:"form-control form-size", id:"sales_amount", placeholder:"確定売上金額", rows:"1" %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="contracted_date col-6">
+            <div class="weight-bold-text">成約日</div>
+            <%= f.date_field :contracted_date, class:"items-text", id:"contracted_date", placeholder:"成約日" %>
+          </div>
+          <div class="lost_order_date col-6">
+            <div class="weight-bold-text">失注日</div>
+            <%= f.date_field :lost_order_date, class:"items-text", id:"lost_order_date", placeholder:"失注日" %>
+          </div>
+        </div>
+
+        <div class="phase_id">
+          <div class="weight-bold-text">フェーズ</div>
+          <%= f.collection_select(:phase_id, Phase.all, :id, :name, {}, {class:"select-box", id:"phase"}) %>
+        </div>
+
+        <div class="purchase">
+          <div class="purchase-btn">
+            <%= f.submit "保存", class:"btn btn-primary" %>
+          </div>
+        </div>
+        <% end %>
+      </div>
 
     <%# コメント機能 %>
     <div class="comment-forms col-3">
@@ -114,5 +133,6 @@
     </div>
     <%# /コメント機能 %>
 
+    </div>
   </div>
 </div>
