--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -2,7 +2,7 @@
 <div class='main'>
 
   <%# モーダル投稿機能 %>
-  <div class="container">
+  <div class="op-index">
     <div class="row">
       <div class="post-btn">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">新規案件投稿</button>
