--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
         <% if user_signed_in? %>
-          <li><%= link_to current_user.name, "/users/#{current_user.id}", class: "dropdown-item" %></li>
+          <li><%= link_to "#{current_user.name}のマイページ", "/users/#{current_user.id}", class: "dropdown-item" %></li>
           <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
         <% else %>
           <li><%= link_to 'ログイン', new_user_session_path, class: "dropdown-item" %></li>
@@ -26,7 +26,7 @@
     <div class='btns'>
         <% if user_signed_in? %>
       <div><%= link_to 'ホーム', "/", class: "btn" %></div>
-      <div><%= link_to 'NEWS', "#", class: "btn" %></div>
+      <div><%= link_to 'NEWS', news_index_path, class: "btn" %></div>
       <div><%= link_to 'マイページ', "/users/#{current_user.id}", class: "btn" %></div>
         <% else %>
       <div><%= link_to 'ホーム', "/", class: "btn" %></div>
