--- a/app/views/opportunities/edit.html.erb
+++ b/app/views/opportunities/edit.html.erb
@@ -26,7 +26,7 @@
         <%= render 'shared/error_messages', model: f.object %>
 
         <div class="form-group">
-          <div class="weight-bold-text">備考欄</div>
+          <div class="weight-bold-text">伝達事項</div>
           <%= f.text_area :free_text, class:"form-control form-size", id:"free_text", placeholder:"フリーテキスト", rows:"3" %>
         </div>
 
