--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -5,7 +5,7 @@
   <div class="op-index">
     <div class="row">
       <div class="post-btn">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">新規案件投稿</button>
+        <button type="button" class="btn-orange" data-bs-toggle="modal" data-bs-target="#exampleModal">新規案件投稿</button>
       </div>
       <div class="opportunities">
         <%= render 'opportunities', opportunities: @opportunities %>
