--- a/app/assets/stylesheets/opportunities/edit.css
+++ b/app/assets/stylesheets/opportunities/edit.css
@@ -1,5 +1,5 @@
 .op-main{
-  background: linear-gradient(45deg,#11998e,#008080)
+  background: #DDDDDD
 }
 
 .main-head-contents{
@@ -25,10 +25,6 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-}
-
-.phase{
-
 }
 
 .progress{
