--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -1,6 +1,12 @@
+.account-page{
+  background-color: #DDDDDD;
+  padding: 30px 0;
+  height: 100vh;
+}
+
 .account-page .account-page__inner {
   width: 980px;
-  margin: 60px auto;
+  margin: 0 auto;
   padding: 60px;
   background-color: #fff;
   border: 1px solid #ddd;
