--- a/app/assets/stylesheets/opportunities/edit.css
+++ b/app/assets/stylesheets/opportunities/edit.css
@@ -32,12 +32,24 @@
   border-radius: 20px;
 }
 
+.bar-color{
+  background-color: gray;
+}
+
 .main-foot{
   display: flex;
 }
 
 .form-size{
   width: 60%;
+}
+
+.box-size{
+  width: 160px;
+  height: 30px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  border-color: #CED4D9;
 }
 
 .edit-form{
