--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -69,3 +69,28 @@
   display: flex;
   align-items: center;
 }
+
+.csv{
+  height: 26px;
+  background-color: #EFEFEF;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border-radius: 8px;
+  margin: 20px 40px 0 0;
+}
+
+.csv:hover{
+  box-shadow: 0 2px 4px black;
+  background-color: #EEEEEE;
+}
+
+.csv a{
+  text-decoration: none;
+  color: black;
+}
+
+.csv a:hover{
+  color: black;
+}
