--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -44,15 +44,11 @@
           <%= f.submit '検索' %>
         </div>
       <% end %>
-
-        <%# <form class="d-flex"> %>
-          <%# <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> %>
-          <%# <button class="btn btn-outline-success" type="submit">Search</button> %>
-        <%# </form> %>
-
     </nav>
+    <div class="csv-btn">
       <div class="csv">
         <%= link_to "CSV出力",root_path(format: :csv) %>
       </div>
+    </div>
   </div>
 </header>
