見た目の調整

--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -22,30 +22,40 @@
         </div>
         <%= form_for @opportunity, remote: true do |f| %>
           <div class="modal-body">
-            <div class="form-groupe">
-              <%= f.label :op_name, "案件名" %>
-              <%= f.text_field :op_name, class: "form_control" %>
+
+            <div class="op-post">
+              <div class="form-groupe col-6">
+                <%= f.label :op_name, "案件名" %>
+                <%= f.text_field :op_name, class: "form_control" %>
+              </div>
+              <div class="form-groupe col-6">
+                <%= f.label :op_name, "会社名" %>
+                <%= f.text_field :company, class: "form_control" %>
+              </div>
             </div>
-            <div class="form-groupe">
-              <%= f.label :op_name, "会社名" %>
-              <%= f.text_field :company, class: "form_control" %>
+
+            <div class="op-post">
+              <div class="form-groupe col-6">
+                <div class="select-box"><%= f.label :op_name, "エリア" %></div>
+                <div class="select-box"><%= f.collection_select(:company_area_id, CompanyArea.all, :id, :name, {}, {class: "form_control", id:"company-area"}) %></div>
+              </div>
+              <div class="form-groupe col-6">
+                <%= f.label :op_name, "先方担当者名" %>
+                <%= f.text_field :person_in_charge, class: "form_control" %>
+              </div>
             </div>
-            <div class="form-groupe">
-              <%= f.label :op_name, "エリア" %>
-              <%= f.collection_select(:company_area_id, CompanyArea.all, :id, :name, {}, {class: "form_control", id:"company-area"}) %>
+
+            <div class="op-post">
+              <div class="form-groupe col-6">
+                <%= f.label :op_name, "商品情報取得日" %>
+                <%= f.date_field :date_of_obtaining, class: "form_control" %>
+              </div>
+              <div class="form-groupe col-6">
+                <div class="select-box"><%= f.label :op_name, "フェーズ" %></div>
+                <div class="select-box"><%= f.collection_select(:phase_id, Phase.all, :id, :name, {}, {class: "form_control", id:"phase"}) %></div>
+              </div>
             </div>
-            <div class="form-groupe">
-              <%= f.label :op_name, "先方担当者名" %>
-              <%= f.text_field :person_in_charge, class: "form_control" %>
-            </div>
-            <div class="form-groupe">
-              <%= f.label :op_name, "商品情報取得日" %>
-              <%= f.date_field :date_of_obtaining, class: "form_control" %>
-            </div>
-            <div class="form-groupe">
-              <%= f.label :op_name, "フェーズ" %>
-              <%= f.collection_select(:phase_id, Phase.all, :id, :name, {}, {class: "form_control", id:"phase"}) %>
-            </div>
+
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
