--- a/app/assets/stylesheets/opportunities/_opportunities.css
+++ b/app/assets/stylesheets/opportunities/_opportunities.css
@@ -21,3 +21,12 @@
   border-radius: 10px;
   margin-top: 10px;
 }
+
+.op-post{
+  display: flex;
+}
+
+.form-groupe{
+  display: block;
+  margin-bottom: 30px;
+}
