--- a/app/views/opportunities/_opportunities.html.erb
+++ b/app/views/opportunities/_opportunities.html.erb
@@ -13,13 +13,13 @@
   <% opportunities.each do |o| %>
     <%= link_to edit_opportunity_path(o.id) do %>
       <tbody>
-        <tr onclick='window.location="<%= edit_opportunity_path(o.id) %>"' role="link">
+        <tr>
           <th scope="row"><%= o.id %></th>
-          <td class="table-link"><%= o.op_name %></td>
-          <td class="table-link"><%= o.company %></td>
-          <td class="table-link"><%= o.company_area.name %></td>
-          <td class="table-link"><%= o.user.name %></td>
-          <td class="table-link"><%= o.phase.name %></td>
+          <td onclick='window.location="<%= edit_opportunity_path(o.id) %>"' role="link" class="table-link"><%= o.op_name %></td>
+          <td><%= o.company %></td>
+          <td onclick='window.location="<%= edit_opportunity_path(o.id) %>"' role="link" class="table-link"><%= o.company_area.name %></td>
+          <td onclick='window.location="<%= edit_opportunity_path(o.id) %>"' role="link" class="table-link"><%= o.user.name %></td>
+          <td><%= o.phase.name %></td>
         </tr>
       </tbody>
     <% end %>
