--- a/app/assets/stylesheets/opportunities/_opportunities.css
+++ b/app/assets/stylesheets/opportunities/_opportunities.css
@@ -20,6 +20,8 @@
   background-color: white;
   border-radius: 10px;
   margin-top: 10px;
+  height: calc(100% - 50px);
+  overflow-y: scroll;
 }
 
 .op-post{
