--- a/app/assets/stylesheets/opportunities/index.css
+++ b/app/assets/stylesheets/opportunities/index.css
@@ -1,15 +1,24 @@
 html,body{
-  height: 100%;
+  height: 100vh;
 }
 
 .main{
-  height: 100%;
+  height: calc(100vh - 160px);
   padding: 10px;
   background: #DDDDDD;
 }
 
+.op-index{
+  height: calc(100% - 20px);
+}
+
+.row{
+  height: 100%;
+}
+
 .post-btn{
   margin-bottom: 10px;
+  height: 50px;
 }
 
 .btn-orange{
