--- a/app/views/opportunities/edit.html.erb
+++ b/app/views/opportunities/edit.html.erb
@@ -2,30 +2,11 @@
 <div class="op-contents">
   <div class="op-main">
 
-      <div class="main-head-contents">
-    <div class="main-head">
-        <div class="status-bar">
-          <div class="phase">フェーズ</div>
-          <div class="progress" style="height: 30px;">
-            <% if @opportunity.phase_id == 1 %>
-              <div class="progress-bar" role="progressbar" style="width: 15%;"><%= @opportunity.phase.name %></div>
-            <% elsif @opportunity.phase_id == 2 %>
-              <div class="progress-bar" role="progressbar" style="width: 30%;"><%= @opportunity.phase.name %></div>
-            <% elsif @opportunity.phase_id == 3 %>
-              <div class="progress-bar" role="progressbar" style="width: 45%;"><%= @opportunity.phase.name %></div>
-            <% elsif @opportunity.phase_id == 4 %>
-              <div class="progress-bar" role="progressbar" style="width: 60%;"><%= @opportunity.phase.name %></div>
-            <% elsif @opportunity.phase_id == 5 %>
-              <div class="progress-bar" role="progressbar" style="width: 75%;"><%= @opportunity.phase.name %></div>
-            <% elsif @opportunity.phase_id == 6 %>
-              <div class="progress-bar" role="progressbar" style="width: 100%;"><%= @opportunity.phase.name %></div>
-            <% else %>
-              <div class="progress-bar bg-warning" role="progressbar" style="width: 100%;"><%= @opportunity.phase.name %></div>
-            <% end %>
-          </div>
-        </div>
-    </div>
+    <div class="main-head-contents">
+      <div class="main-head">
+        <%= render 'phase', opportunity: @opportunity %>
       </div>
+    </div>
     
     <div class="main-foot">
       <div class="edit-form col-8">
