header見た目の調整

--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -38,7 +38,7 @@
 .nav{
   height: 40%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   outline: 1px solid #008080;
   background-color: #008080;
 }
