--- a/app/views/company_areas/show.html.erb
+++ b/app/views/company_areas/show.html.erb
@@ -18,13 +18,21 @@
           <% @opportunities.each do |o| %>
             <%= link_to edit_opportunity_path(o.id) do %>
               <tbody>
-                <tr onclick='window.location="<%= edit_opportunity_path(o.id) %>"' role="link">
+                <tr>
                   <th scope="row"><%= o.id %></th>
-                  <td class="table-link"><%= o.op_name %></td>
-                  <td class="table-link"><%= o.company %></td>
-                  <td class="table-link"><%= o.company_area.name %></td>
-                  <td class="table-link"><%= o.user.name %></td>
-                  <td class="table-link"><%= o.phase.name %></td>
+                  <%= link_to edit_opportunity_path(o.id) do %>
+                    <td onclick='window.location="<%= edit_opportunity_path(o.id) %>"' role="link" class="table-link"><%= o.op_name %></td>
+                  <% end %>
+                    <td><%= o.company %></td>
+                  <%= link_to company_area_path(o.company_area_id) do %>
+                    <td onclick='window.location="<%= company_area_path(o.company_area_id) %>"' role="link" class="table-link"><%= o.company_area.name %></td>
+                  <% end %>
+                  <%= link_to user_path(o.user_id) do %>
+                    <td onclick='window.location="<%= user_path(o.user_id) %>"' role="link" class="table-link"><%= o.user.name %></td>
+                  <% end %>
+                  <%= link_to phase_path(o.phase_id) do %>
+                    <td onclick='window.location="<%= phase_path(o.phase_id) %>"' role="link" class="table-link"><%= o.phase.name %></td>
+                  <% end %>
                 </tr>
               </tbody>
             <% end %>
